Fix: Font size issues on mobile display
- Font sizing issue caused by invisible flex element

--- a/styles/markdown/_callout.css
+++ b/styles/markdown/_callout.css
@@ -25,7 +25,7 @@
         --prompt-tip-text-color: #45ff45ab;
         --prompt-info-bg: rgb(7, 59, 104, 0.8);
         --prompt-info-icon-color: #0075d1;
-        --prompt-info-text-color: #53b2ffc9;
+        --prompt-info-text-color: #d5ecffc9;
         --prompt-warning-bg: rgb(90, 69, 3, 0.88);
         --prompt-warning-icon-color: rgb(255, 165, 0, 0.8);
         --prompt-warning-text-color: #ffc65cc9;
